# Brokenithm-Android-Server

./: .gitignore  CMakeLists.txt  OPTIMIZATION_REPORT.md  README.md
segatools/aimeio/: aimeio.c
segatools/chuniio/: chuniio.c
src/: main.cpp  shared_memory.cpp  shared_memory.h  signal_processor.cpp  signal_processor.h  utils.h
